# ragai-negsim

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.MD  alembic.ini  compose.yaml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/airag/: pipeline_factory.py
app/core/: config.py  dependencies.py  logging.py  security.py
app/db/: db.py
app/middleware/: logging.py
app/models/: __init__.py  chunking_profiles.py  corpus.py  corpus_indices.py  counterpart_personas.py  document_chunks.py  indexed_chunks.py  indexing_job_warnings.py  indexing_jobs.py  knowledge_graph_build_jobs.py  knowledge_graph_indices.py  prompts.py  rag_eval.py  rag_profiles.py  raw_documents.py  scenarios.py  sessions.py  simulation_evidence_ledgers.py  simulations.py  user_roles.py  users.py  vector_stores.py
app/repositories/: chunking_profiles_repo.py  corpus_indices_repo.py  corpus_repo.py  counterpart_personas_repo.py  document_chunks_repo.py  helpers.py  indexed_chunks_repo.py  indexing_jobs_repo.py  knowledge_graph_build_jobs_repo.py  knowledge_graph_indices_repo.py  prompts_repo.py  rag_eval_repo.py  rag_profiles_repo.py  raw_documents_repo.py  scenarios_repo.py  sessions_repo.py  simulation_evidence_ledgers_repo.py  simulations_repo.py  users_repo.py  vector_stores_repo.py
app/schemas/: chunker_definitions_schemas.py  chunking_profiles_schemas.py  chunking_schemas.py  corpus_indices_schemas.py  corpus_schemas.py  counterpart_personas_schemas.py  document_chunks_schemas.py  embeddings_schemas.py  evidence_ledger_schemas.py  indexed_chunks_schemas.py  indexing_jobs_schemas.py  ingestion_schemas.py  knowledge_graph_build_jobs_schemas.py  knowledge_graph_indices_schemas.py  llm_models_schemas.py  prompts_schemas.py  rag_eval_schemas.py  rag_profile_definitions_schemas.py  rag_profiles_schemas.py  raw_documents_schemas.py  scenarios_schemas.py  sessions_schemas.py  simulation_learner_schemas.py  simulations_schemas.py  users_schemas.py  vector_stores_schemas.py
app/services/: auth.py  chunking_profile_runtime.py  chunking_profiles_service.py  chunking_service.py  corpus_indices_service.py  corpus_service.py  counterpart_personas_service.py  document_chunks_service.py  embeddings_service.py  helpers.py  indexing_jobs_service.py  ingestion_service.py  knowledge_graph_builds_service.py  knowledge_graph_indices_service.py  llm_models_service.py  prompts_service.py  rag_eval_coordinator.py  rag_eval_service.py  rag_profiles_service.py  raw_documents_service.py  scenarios_service.py  sessions_service.py  simulation_learner_service.py  simulations_service.py  source_cards_service.py  users_service.py  vector_stores_service.py
chroma2_db/beb0bd4e-ad5f-4ce6-a2a4-c95c847f642b/: index_metadata.pickle
chroma_db/: chroma.sqlite3
chroma_db_1/0b22ff1c-62b3-4942-96be-a8b2559b9876/: index_metadata.pickle
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/docs/: backend-gaps.md  implementation-notes.md
frontend/scripts/: generate-api.mjs
frontend/src/: index.css  main.tsx
large_tool_results/: call_GDXpqKDieOIwlLbsWu67QeT3.txt
logs/: app.log.1
migrations/: env.py  script.py.mako
migrations/versions/: 07a8bfa2754f_initial_schema.py  165f7ed30e76_initial_schema.py  32043c5516ff_initial_schema.py  3bbdb71076fd_raw_documents_bibliographical_fields.py  411cd378d413_support_evidence_ledger.py  47e6beb8360c_initial_schema.py  4b7d55dfd1e4_add_indexing_job_cancel_requested.py  64c066665a81_initial_schema.py  87637f9b0af7_raw_documents_date_to_year.py  8c2b19e0cdb1_add_knowledge_graph_rag.py  95c6cf32d9c9_initial_schema.py  9e6872fcf5f2_support_scenario_summaries.py  a3c4d5e6f7a8_add_rag_eval_answer_generation_snapshot.py  b4d5e6f7a8b9_replace_rag_eval_schema.py  d5e8f1a2b3c4_add_knowledge_graph_build_progress.py  e7a2c9d4f1b6_add_rag_eval_persistence.py  ed3aee50a76b_initial_schema.py  f1452cd6b1a5_initial_schema.py  f2b7c8d9e0a1_add_rag_eval_retrieval_config.py
openwiki/: .last-update.json  quickstart.md
openwiki/architecture/: backend.md  frontend.md
openwiki/domains/: knowledge-retrieval.md  simulations.md
openwiki/operations/: testing.md
scripts/: bootstrap.py  dev.py  flushdb.py  personas.py  scenarios.py  seeder.py
tests/: conftest.py  test_agent_context_projections.py  test_agent_evidence_ledger.py  test_agent_prompt_privacy.py  test_agent_scenario_context.py  test_alpha_smoke_api.py  test_chunking_profile_definitions.py  test_chunking_profiles_route.py  test_chunking_profiles_service.py  test_chunking_service.py  test_corpus_embed_jobs_route.py  test_corpus_indices_service.py  test_counterpart_helpers.py  test_counterpart_personas_service.py  test_crag_evidence_ledger.py  test_crag_grounding.py  test_crag_reranking.py  test_document_chunks_route.py  test_document_chunks_service.py  test_embeddings_service.py  test_evaluator_modes.py  test_evidence_ledger.py  test_flushdb_and_seed.py  test_graphrag_retrieval.py  test_indexing_jobs_repo.py  test_indexing_jobs_route.py  test_indexing_jobs_service.py  test_ingestion_service.py  test_intent_classifier.py  test_knowledge_graph_builds_service.py  test_knowledge_graph_domain.py  test_knowledge_graph_embedding_factory.py  test_knowledge_graph_nodes.py  test_langsmith_config.py  test_langsmith_traceable_boundaries.py  test_learner_crag_tool.py  test_learner_negotiation_summary_tool.py  test_learner_prompt.py  test_learner_tavily_tool.py  test_llm_models_service.py  (+27 more)
tests/integration/: conftest.py  test_neo4j_scoped_store.py  test_postgres_migrations.py  (+2 more)
(+314 files in other folders)
