[project]
name = "ragai-negsim"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate==1.13.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "alembic>=1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.13.0",
    "argon2-cffi>=25.1.0",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "banks==2.4.2",
    "beautifulsoup4==4.14.3",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecated==1.3.1",
    "dill==0.4.1",
    "dirtyjson==1.0.8",
    "distro==1.9.0",
    "docling==2.88.0",
    "docling-core==2.73.0",
    "docling-ibm-models==3.13.0",
    "docling-parse==5.8.0",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "faiss-cpu>=1.14.2",
    "faker==40.13.0",
    "fastapi>=0.136.3",
    "filelock==3.25.2",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "fsspec==2026.3.0",
    "greenlet==3.5.0",
    "griffe==2.0.2",
    "griffecli==2.0.2",
    "griffelib==2.0.2",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.10.2",
    "idna==3.11",
    "iniconfig==2.3.0",
    "ipykernel==7.2.0",
    "ipython==9.12.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.14.0",
    "joblib==1.5.3",
    "jsonlines==4.0.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonref==1.1.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "langchain==1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-classic==1.0.7",
    "langchain-cohere>=0.6.0",
    "langchain-community==0.4.1",
    "langchain-core==1.4.0",
    "langchain-docling>=2.0.0",
    "langchain-experimental==0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama==1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-protocol==0.0.15",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.0",
    "langgraph-checkpoint==4.1.0",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.3.13",
    "langsmith==0.7.32",
    "latex2mathml==3.80.0",
    "llama-index==0.14.22",
    "llama-index-core==0.14.22",
    "llama-index-embeddings-ollama==0.9.0",
    "llama-index-embeddings-openai==0.6.0",
    "llama-index-graph-stores-neo4j>=0.7.0",
    "llama-index-instrumentation==0.5.0",
    "llama-index-llms-ollama==0.10.1",
    "llama-index-llms-openai==0.7.8",
    "llama-index-workflows==2.20.0",
    "lxml==6.0.4",
    "markdown-it-py==4.0.0",
    "marko==2.2.2",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mpire==2.10.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "mypy-extensions==1.1.0",
    "neo4j>=5.16,<6",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nltk==3.9.4",
    "numpy==2.4.4",
    "ollama==0.6.1",
    "omegaconf==2.3.0",
    "openai==2.37.0",
    "opencv-python==4.13.0.92",
    "openpyxl==3.1.5",
    "orjson==3.11.8",
    "ormsgpack==1.12.2",
    "packaging==26.0",
    "pandas==3.0.2",
    "parso==0.8.6",
    "passlib>=1.7.4",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "polyfactory==3.3.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "pure-eval==0.2.3",
    "pyclipper==1.4.0",
    "pydantic==2.13.0",
    "pydantic-core==2.46.0",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "pylatexenc==2.10",
    "pyopencl>=2026.1.2",
    "pypdf==6.10.1",
    "pypdfium2==5.7.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.30",
    "python-pptx==1.0.2",
    "pytz==2026.2",
    "pywin32==311",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rapidocr==3.8.1",
    "referencing==0.37.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rpds-py==0.30.0",
    "rtree==1.4.1",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "semchunk==3.2.5",
    "sentence-transformers==5.5.0",
    "setuptools==81.0.0",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.49",
    "sqlmodel>=0.0.38",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tiktoken==0.13.0",
    "tinytag==2.2.1",
    "tokenizers==0.22.2",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==5.5.4",
    "tree-sitter==0.25.2",
    "tree-sitter-c==0.24.1",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-python==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "typer==0.21.2",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "wcwidth==0.6.0",
    "websockets==16.0",
    "wrapt==2.1.2",
    "xlsxwriter==3.2.9",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zstandard==0.25.0",
]
